Make Gallery and Detail pages

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -29,7 +29,7 @@
     justify-content: space-around;
 }
 
-.logos i {
+.social-logos {
     display: inline-block;
     font-size: 30px;
     color: white;
